--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -1,7 +1,7 @@
-<%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'personal', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
-  <h2>Travel index</h2>
+  <h2>All travels</h2>
   <%= render 'layouts/notice' %>
   <p class='mb-0'>latest travel : <%= @latest_travel.title %></p>
 
