--- a/app/assets/stylesheets/travels.css.scss
+++ b/app/assets/stylesheets/travels.css.scss
@@ -1,7 +1,5 @@
 .container-fluid {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' %3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(44,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23ff7b2f'/%3E%3Cstop offset='1' stop-color='%237e15ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpattern id='b' width='11' height='11' patternUnits='userSpaceOnUse'%3E%3Ccircle fill='%23ffffff' cx='5.5' cy='5.5' r='5.5'/%3E%3C/pattern%3E%3Crect width='100%25' height='100%25' fill='url(%23a)'/%3E%3Crect width='100%25' height='100%25' fill='url(%23b)' fill-opacity='0.04'/%3E%3C/svg%3E");
-  /* background by SVGBackgrounds.com */
-  background-color: #ffffff;
+  background-color: #FFB11B;
   background-attachment: fixed;
   background-size: cover;
 }
