--- a/app/views/lists/_item_fields.html.erb
+++ b/app/views/lists/_item_fields.html.erb
@@ -13,5 +13,5 @@
     %>
   </div>
 
-  <%= link_to_remove_association 'DELERT ITEM', f, class: 'btn btn-primary btn-sm' %>
+  <%= link_to_remove_association 'DELERT ITEM', f, class: 'btn btn-secondary btn-sm' %>
 </div>
