--- a/app/views/lists/personal.html.erb
+++ b/app/views/lists/personal.html.erb
@@ -6,7 +6,9 @@
   <hr>
 
   <% @lists.includes(:travel).each do |l| %>
-    <li class='mb-2'><%= link_to l.title,l %> has <%= l.items.count %> items, on <%= l.travel.title %></li>
+    <li class='mb-2'>
+      <%= link_to l.title, l %> has <%= l.items.count %> items, on <%= l.travel.title %>
+    </li>
   <% end %>
 
   <hr>
