--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -4,6 +4,7 @@
   <div class='row'>
     <div class='col-12'>
       <h2><%= @travel.title %></h2>
+      <%= render 'layouts/notice' %>
       <p class='mb-2'>
         <%= @travel.departed_at %> ~ <%= @travel.returned_at %> (<%= (@travel.returned_at - @travel.departed_at).numerator %>days)
       </p>
