--- a/app/views/users/personal.html.erb
+++ b/app/views/users/personal.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'users', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'personal', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
   <div class='row' id='user_information1'>
