--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,7 +7,7 @@
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <% if resource.errors.any? %>
-        <div class='border rounded' id='error_explanation'>
+        <div class='border rounded' id='registrations_error_area'>
             <% resource.errors.full_messages.each do |m| %>
               <li><%= m %></li>
             <% end %>
@@ -39,9 +39,10 @@
 
       <div class='form-group'>
         <%= f.password_field :password_confirmation,
-        autocomplete: 'new-password',
-        placeholder: 'password confirmation',
-        class: 'form-control' %>
+                             autocomplete: 'new-password',
+                             placeholder: 'password confirmation',
+                             class: 'form-control'
+        %>
       </div>
 
       <div class='form-group'>
