Travelモデルのindexページを修正

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'lists', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
   <h2>Lists</h2>
