--- a/app/views/notes/_new.html.erb
+++ b/app/views/notes/_new.html.erb
@@ -9,7 +9,7 @@
 <%= form_with(model: @note) do |f| %>
   <div class='form-group'>
     <%= f.text_area :content,
-                    placeholder: 'list title',
+                    placeholder: 'content',
                     class: 'form-control'
     %>
   </div>
@@ -39,7 +39,14 @@
     </label>
   </div>
 
-  <div class='form-group'>
-    <%= f.submit 'CREATE', class: 'btn btn-primary btn-sm' %>
-  </div>
+  <% if action_name == 'edit' %>
+    <div class='form-group'>
+      <%= f.submit 'UPDATE', class: 'btn btn-primary btn-sm' %>
+      <%= link_to 'DELETE', note_path(@note), data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-secondary btn-sm' %>
+    </div>
+  <% else %>
+    <div class='form-group'>
+      <%= f.submit 'CREATE', class: 'btn btn-primary btn-sm' %>
+    </div>
+  <% end %>
 <% end %>
