--- a/app/views/lists/_new.html.erb
+++ b/app/views/lists/_new.html.erb
@@ -21,15 +21,25 @@
   </div>
 
   <div class='form-group'>
-    <%= f.submit 'CREATE', class: 'btn btn-primary btn-sm' %>
-
-    <%= link_to_add_association 'ADD ITEM', f, :items,
-      class: 'btn btn-primary btn-sm',
-      id: 'add_item_link',
-      data: {
-       association_insertion_node: '#add_item',
-       association_insertion_method: 'append'
-      }
-    %>
+    <% if action_name == 'edit' %>
+      <%= f.submit 'UPDATE', class: 'btn btn-primary btn-sm' %>
+      <%= link_to_add_association 'ADD ITEM', f, :items,
+            class: 'btn btn-primary btn-sm',
+            id: 'add_item_link',
+            data: { association_insertion_node: '#add_item',
+                    association_insertion_method: 'append'
+                  }
+      %>
+      <%= link_to 'DELETE', list_path(@list), data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-secondary btn-sm' %>
+    <% else %>
+      <%= f.submit 'CREATE', class: 'btn btn-primary btn-sm' %>
+      <%= link_to_add_association 'ADD ITEM', f, :items,
+            class: 'btn btn-primary btn-sm',
+            id: 'add_item_link',
+            data: { association_insertion_node: '#add_item',
+                    association_insertion_method: 'append'
+                  }
+      %>
+    <% end %>
   </div>
 <% end %>
