--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,29 +1,7 @@
-<% if @list.errors.any? %>
-  <div id='list_error_area'>
-    Creation failed due to <%= pluralize(@list.errors.count, 'error') %>.<br>
-    <% @list.errors.full_messages.each do |m| %>
-      <li><%= m %></li>
-    <% end %>
-  </div>
-<% end %>
+<%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-<%= form_with(model: @list) do |f| %>
-  <%= f.label :'title' %><%= f.text_field :title %><br>
-
-  <div id='add_item'>
-    <%= f.fields_for :items do |i| %>
-      <%= render 'item_fields', f: i %>
-    <% end %>
-  </div>
-
-  <%= link_to_add_association 'ADD ITEM', f, :items,
-    id: 'add_item_link',
-    data: {
-     association_insertion_node: '#add_item',
-     association_insertion_method: 'append'
-    }
-  %><br>
-
-  <%= f.submit 'UPDATE' %>
-  <%= link_to 'DELETE', list_path(@list), data: { confirm: 'Are you sure?' }, method: :delete %>
-<% end %>
+<div class='col-sm-10 offset-sm-2 contents'>
+  <h2>Edit list</h2>
+  <hr>
+  <%= render 'new', list: @list %>
+</div>
