Listモデルのshowページにbootstrapを適用

--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -16,13 +16,13 @@
     </div>
 
     <div class='col-12 table-responsive collapse' id='collapse_areas'>
-      <table class='table table-hover text-nowrap'>
+      <table class='table table-sm table-hover text-nowrap'>
         <tbody>
-          <tr>
+          <thead class='thead-light'>
             <th>country</th>
             <th>place</th>
             <th>during </th>
-          </tr>
+          </thead>
           <% @travel.areas.each do |x| %>
             <tr>
               <td><%= x.country %></td>
