--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,8 +1,25 @@
-<%= @list.title %><br>
-<% @list.items.each do |i| %>
-  <%= i.name %> : <%= i.remark %><br>
-<% end %>
+<%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-<p>
-  <%= link_to 'リスト編集', edit_list_path(@list) %>
-</p>
+<div class='col-sm-10 offset-sm-2 contents'>
+  <p><strong><%= @list.title %></strong></p>
+  <%= render 'layouts/notice' %>
+
+  <div class='col-12 table-responsive pr-0 pl-0'>
+    <table class='table table-sm table-bordered table-hover text-nowrap'>
+      <tbody>
+        <thead class='thead-light'>
+          <th>name</th>
+          <th>remark</th>
+        </thead>
+        <% @list.items.each do |i| %>
+          <tr>
+            <td><%= i.name %></td>
+            <td><%= i.remark %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
+  <%= link_to 'リスト編集', edit_list_path(@list), class: 'btn btn-primary btn-sm' %>
+</div>
