--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -2,6 +2,8 @@
 
 <div class='col-sm-10 offset-sm-2 contents'>
   <h2>Edit list</h2>
-  <hr>
-  <%= render 'new', list: @list %>
+  <hr class='mb-0'>
+  <div id='list_area'>
+    <%= render partial: 'lists/new', locals: { list: @list } %>
+  </div>
 </div>
