--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,6 +2,7 @@
 
 <div class='col-sm-10 offset-sm-2 contents'>
   <h2>Lists</h2>
+  <%= render 'layouts/notice' %>
   <button type='button' class='btn btn-primary btn-sm' data-toggle='collapse' data-target='#list_area' aria-expanded='false' aria-controls='list_area'>
     リスト新規作成
   </button>
