リストコピー機能をデバッグ

--- a/app/views/lists/_index_js.js.erb
+++ b/app/views/lists/_index_js.js.erb
@@ -1,3 +1,4 @@
 $("#lists_area").html("<%= j(render 'lists/index', { lists: @associated_travel.lists }) %>")
+$("textarea").val('')
 $("input").val('')
 $("#list_error_area").remove()
