--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,8 +2,7 @@
 
 @media only screen and (min-width: 576px){
   #header,
-  #footer,
-  #user_information2 {
+  #footer {
     display: none;
   }
 
@@ -13,8 +12,7 @@
 }
 
 @media only screen and (max-width: 576px){
-  #sidebar,
-  #user_information1 {
+  #sidebar {
     display: none;
   }
 
