--- a/app/views/travels/_form.html.erb
+++ b/app/views/travels/_form.html.erb
@@ -1,5 +1,5 @@
 <div class='col-sm-10 offset-sm-2 contents'>
-  <% if action_name == 'edit' %>
+  <% if action_name == 'edit' || action_name == 'update' %>
     <%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
     <h2>Edit travel</h2>
   <% else %>
@@ -41,7 +41,7 @@
       <% end %>
     </div>
 
-    <% if action_name == 'edit' %>
+    <% if action_name == 'edit' || action_name == 'update' %>
       <%= f.submit 'UPDATE', class: 'btn btn-primary btn-sm' %>
 
       <%= link_to_add_association 'ADD AREA', f, :areas,
