--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -28,9 +28,11 @@
           class: 'custom-select mb-3'
     %>
 
-    <%= f.fields_for :images do |i| %>
-      <%= i.file_field :data, class: 'mb-3' %><br>
-    <% end %>
+    <div id='add_image'>
+      <%= f.fields_for :images do |i| %>
+        <%= render 'image_fields', f: i %>
+      <% end %>
+    </div>
 
     <div class='form-group'>
       <%= f.text_field :title,
@@ -49,11 +51,25 @@
     <% if action_name == 'edit' %>
       <div class='form-group'>
         <%= f.submit "UPDATE", class: 'btn btn-primary btn-sm' %>
+        <%= link_to_add_association 'ADD IMAGE', f, :images,
+              class: 'btn btn-primary btn-sm',
+              id: 'add_image_link',
+              data: { association_insertion_node: '#add_image',
+                      association_insertion_method: 'append'
+                    }
+        %>
         <%= link_to "DELETE", card_path(@card), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-secondary btn-sm' %>
       </div>
     <% else %>
       <div class='form-group'>
         <%= f.submit "CREATE", class: 'btn btn-primary btn-sm' %>
+        <%= link_to_add_association 'ADD IMAGE', f, :images,
+              class: 'btn btn-primary btn-sm',
+              id: 'add_image_link',
+              data: { association_insertion_node: '#add_image',
+                      association_insertion_method: 'append'
+                    }
+        %>
       </div>
     <% end %>
   <% end %>
