--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -24,6 +24,19 @@ html, body,
   }
 }
 
+.image {
+  width: 100%;
+  border-radius: 5px;
+  display: block;
+}
+
+@media only screen and (max-width: 576px){
+  .carousel-control-next-icon,
+  .carousel-control-prev-icon {
+    display: none;
+  }
+}
+
 .title_wrapper {
   position: relative;
   height: 100%;
@@ -52,47 +65,52 @@ html, body,
   }
 }
 
-.logo, .image {
-  width: 100%;
-  display: block;
-}
-
-.log_in {
+.title_content {
   width: 100%;
   display: block;
   text-align: center;
   color: white;
 }
 
-
-
-.image_wrapper {
+.nav_wrapper {
   position: relative;
   height: 100%;
-  display: inline-block;
-  @media only screen and (min-width: 576px){
-    width: 25%;
-    margin-left: 17.5%;
-  }
-}
-
-.sentence_wrapper {
-  position: relative;
-  height: 100%;
-  display: inline-block;
   background-color: #032123;
-  color: white;
   @media only screen and (min-width: 576px){
     width: 40%;
-    vertical-align: top;
+    margin: auto;
+  }
+  @media only screen and (max-width: 576px){
+    width: 100%;
   }
 }
 
-
-
-@media only screen and (max-width: 576px){
-  .carousel-control-next-icon,
-  .carousel-control-prev-icon {
-    display: none;
+.nav_inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%,-50%);
+  -webkit-transform : translate(-50%,-50%);
+  transform : translate(-50%,-50%);
+  padding: 15px;
+  @media only screen and (min-width: 576px){
+    width: 100%;
   }
+  @media only screen and (max-width: 576px){
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.nav_content {
+  width: 100%;
+  margin-top: 10px;
+  display: block;
+  text-align: center;
+  color: white;
+}
+
+.nav_caption {
+  margin-bottom: 10px;
+  font-size: 1.5rem;
 }
