--- a/app/views/users/landing.html.erb
+++ b/app/views/users/landing.html.erb
@@ -2,12 +2,11 @@
 
 <div id='carouselControls' class='carousel slide' data-ride='carousel' data-interval='false'>
   <div class='carousel-inner'>
-
     <div class='carousel-item active'>
       <div class='title_wrapper'>
         <div class='title_inner'>
-          <%= image_tag('logo.png', class: 'logo') %>
-          <div class='log_in'>
+          <%= image_tag('logo.png', class: 'image') %>
+          <div class='title_content'>
             <p><%= link_to 'Log in', new_user_session_path, class: 'btn btn-outline-light' %></p>
             <p>or slide</p>
           </div>
@@ -16,20 +15,59 @@
     </div>
 
     <div class='carousel-item'>
-      <div class='image_wrapper'>
-        <div class='image_inner'>
-          <%= image_tag('explanation.png', class: 'image') %>
-          <%= image_tag('explanation.png', class: 'image') %>
-          <%= image_tag('explanation.png', class: 'image') %>
+      <div class='nav_wrapper'>
+        <div class='nav_inner'>
+          <%= image_tag('nav_image1.png', class: 'image') %>
+          <div class='nav_content'>
+            <p class='nav_caption'>Welcome!</p>
+            <p class='text-justify'>このアプリケーションは、旅行中に撮った写真にコメントを入れてカードを作ることができます。</p>
+          </div>
         </div>
       </div>
-      <div class='sentence_wrapper'>
-        <div class='sentence_inner'>
-          <div class='sentence'>
-            <div class='text-justify'>
-              <p>STEP○. app概要＋操作説明と画面のスクリーンショットを張り付け</p>
-              <p>この文章はレイアウト確認用です。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はレイアウト確認用です。文字の大きさ、量、字間、行間等を確認するために入れています。</p>
-            </div>
+    </div>
+
+    <div class='carousel-item'>
+      <div class='nav_wrapper'>
+        <div class='nav_inner'>
+          <%= image_tag('nav_image2.png', class: 'image') %>
+          <div class='nav_content'>
+            <p class='nav_caption'>STEP.1</p>
+            <p class='text-justify'>最初に「トラベル新規作成」から、旅行の予定を作成します。（画像とエリア情報は後から追加することができます。）</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class='carousel-item'>
+      <div class='nav_wrapper'>
+        <div class='nav_inner'>
+          <%= image_tag('nav_image3.png', class: 'image') %>
+          <div class='nav_content'>
+            <p class='nav_caption'>STEP.2</p>
+            <p class='text-justify'>作成した旅行予定から、「カード新規作成」を選択します。（アップロードする画像が2枚必要です。）</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class='carousel-item'>
+      <div class='nav_wrapper'>
+        <div class='nav_inner'>
+          <%= image_tag('nav_image4.png', class: 'image') %>
+          <div class='nav_content'>
+            <p class='nav_caption'>STEP.3</p>
+            <p class='text-justify'>画面下部の「PDFで表示」または「ダウンロード」からPDFを作成しダウンロードすることができます。</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class='carousel-item'>
+      <div class='nav_wrapper'>
+        <div class='nav_inner'>
+          <%= image_tag('nav_image5.png', class: 'image') %>
+          <div class='nav_content'>
+            <p class='text-justify'>この他に、持ち物リストなどを作るリスト作成機能、メモ帳機能などがあります。Let's go out！</p>
             <p><%= link_to 'Sign up', new_user_registration_path, class: 'btn btn-outline-light' %></p>
           </div>
         </div>
