URL直打ち対策・Imageモデルのビューを修正

--- a/app/views/cards/_image_fields.html.erb
+++ b/app/views/cards/_image_fields.html.erb
@@ -1,4 +1,4 @@
 <div class='nested-fields'>
   <%= f.file_field :data %>
-  <%= link_to_remove_association 'DELERT IMAGE', f, class: 'btn btn-secondary btn-sm' %>
+  <%= link_to_remove_association 'DELERT IMAGE', f, class: 'delert_image btn btn-secondary btn-sm' %>
 </div>
