--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -37,7 +37,7 @@ html, body,
   }
 }
 
-.title_wrapper {
+.title_wrapper, .nav_wrapper {
   position: relative;
   height: 100%;
   background-color: #032123;
@@ -72,19 +72,6 @@ html, body,
   color: white;
 }
 
-.nav_wrapper {
-  position: relative;
-  height: 100%;
-  background-color: #032123;
-  @media only screen and (min-width: 576px){
-    width: 40%;
-    margin: auto;
-  }
-  @media only screen and (max-width: 576px){
-    width: 100%;
-  }
-}
-
 .nav_inner {
   position: absolute;
   top: 50%;
@@ -92,22 +79,19 @@ html, body,
   -ms-transform: translate(-50%,-50%);
   -webkit-transform : translate(-50%,-50%);
   transform : translate(-50%,-50%);
+  width: 100%;
   padding: 15px;
-  @media only screen and (min-width: 576px){
-    width: 100%;
-  }
   @media only screen and (max-width: 576px){
-    width: 100%;
     height: 100%;
   }
 }
 
 .nav_content {
   width: 100%;
-  margin-top: 10px;
   display: block;
   text-align: center;
   color: white;
+  margin-top: 10px;
 }
 
 .nav_caption {
