Travelモデルの新規作成リンクの配置を変更

--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -3,6 +3,7 @@
 <div class='col-sm-10 offset-sm-2 contents'>
   <h2>All travels</h2>
   <%= render 'layouts/notice' %>
+  <%= link_to 'トラベル新規作成', new_travel_path, class: 'btn btn-primary btn-sm' %>
 
   <hr class='mb-0'>
 
