SPビューでPDF表示リンクが非表示になるよう変更

--- a/app/assets/stylesheets/travels.css.scss
+++ b/app/assets/stylesheets/travels.css.scss
@@ -35,3 +35,9 @@
 .nested-fields {
   margin-bottom: 15px;
 }
+
+@media only screen and (max-width: 576px){
+  .show_pdf {
+    display: none;
+  }
+}
