--- a/app/views/notes/_new.html.erb
+++ b/app/views/notes/_new.html.erb
@@ -14,17 +14,20 @@
     %>
   </div>
 
+  <% if @note.image.present? %>
+    <%= image_tag(@note.image.thumb.url, class: 'img-thumbnail mb-2') %>
+    <div class='custom-control custom-checkbox'>
+      <%= f.check_box :remove_image,
+                      class: 'custom-control-input',
+                      id: 'remove_image'
+      %>
+      <label class='custom-control-label mb-2' for='remove_image'>
+        cancel upload image
+      </label>
+    </div>
+  <% end %>
   <%= f.file_field :image, class: 'mb-3' %>
-
-  <div class='custom-control custom-checkbox'>
-    <%= f.check_box :remove_image,
-                    class: 'custom-control-input',
-                    id: 'remove_image'
-    %>
-    <label class='custom-control-label mb-3' for='remove_image'>
-      cancel upload image
-    </label>
-  </div>
+  <%= f.hidden_field :image_cache %>
 
   <div class='custom-control custom-checkbox'>
     <%= f.check_box :importance,
