--- a/app/views/cards/_image_fields.html.erb
+++ b/app/views/cards/_image_fields.html.erb
@@ -1,4 +1,5 @@
 <div class='nested-fields'>
   <%= f.file_field :data %>
+  <%= f.hidden_field :data_cache %>
   <%= link_to_remove_association 'DELERT IMAGE', f, class: 'delert_image btn btn-secondary btn-sm' %>
 </div>
