--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -7,12 +7,8 @@
   <hr>
 
   <p class='text-justify'><%= @card.sentence %></p>
-  <% @card.images.each_with_index do |x| %>
-    <% if x.present? %>
-      <%= image_tag(x.data.url, class: 'img-thumbnail mb-3') %>
-    <% else %>
-      <%= image_tag('sample_card_image.png') %>
-    <% end %>
+  <% @card.images.each do |i| %>
+    <%= image_tag(i.data.thumb.url, class: 'img-thumbnail mb-3') if i.present? %>
   <% end %>
 
   <hr>
