--- a/app/assets/stylesheets/devise.css.scss
+++ b/app/assets/stylesheets/devise.css.scss
@@ -1,26 +1,16 @@
-@media only screen and (max-width: 576px){
-  #error_explanation, .notice, .alert {
-    border-color: black !important;
-  }
-}
-
-html, body,
-.container-fluid {
-  height: 100%;
-}
-
 .container-fluid {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' %3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(44,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23ff7b2f'/%3E%3Cstop offset='1' stop-color='%237e15ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpattern id='b' width='11' height='11' patternUnits='userSpaceOnUse'%3E%3Ccircle fill='%23ffffff' cx='5.5' cy='5.5' r='5.5'/%3E%3C/pattern%3E%3Crect width='100%25' height='100%25' fill='url(%23a)'/%3E%3Crect width='100%25' height='100%25' fill='url(%23b)' fill-opacity='0.04'/%3E%3C/svg%3E");
   /* background by SVGBackgrounds.com */
   background-color: #ffffff;
   background-attachment: fixed;
   background-size: cover;
+  min-height: 100vh;
 }
 
 .form_wrapper {
-  position: relative;
-  height: 100%;
+  min-height: 100vh;
   @media only screen and (min-width: 576px){
+    display: table;
     width: 30%;
     margin: auto;
     background-color: #032123;
@@ -28,20 +18,27 @@ html, body,
   }
   @media only screen and (max-width: 576px){
     width: 100%;
-    padding-top: 55px;
   }
 }
 
 .form_inner {
-  position: absolute;
   width: 100%;
   @media only screen and (min-width: 576px){
-    top: 45%;
-    left: 50%;
-    -ms-transform: translate(-50%,-45%);
-    -webkit-transform : translate(-50%,-45%);
-    transform : translate(-50%,-45%);
+    vertical-align: middle;
+    display: table-cell;
+    padding-top: 15px;
+    padding-bottom: 20px;
     padding-left: 15px;
     padding-right: 15px;
+  }
+  @media only screen and (max-width: 576px){
+    padding-top: 55px;
+    padding-bottom: 55px;
+  }
+}
+
+@media only screen and (max-width: 576px){
+  #registrations_error_area, .notice, .alert {
+    border-color: black !important;
   }
 }
