全体的にビューを調整

--- a/app/assets/stylesheets/devise.css.scss
+++ b/app/assets/stylesheets/devise.css.scss
@@ -39,6 +39,6 @@
 
 @media only screen and (max-width: 576px){
   #registrations_error_area, .notice, .alert {
-    border-color: black !important;
+    border-color: #212529 !important;
   }
 }
