--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
-  <h2>Edit list</h2>
+  <h2>EDIT LIST</h2>
   <hr class='mb-0'>
   <div id='list_area'>
     <%= render partial: 'lists/new', locals: { list: @list } %>
