--- a/app/views/notes/_index.html.erb
+++ b/app/views/notes/_index.html.erb
@@ -1,6 +1,6 @@
 <% notes.each do |n| %>
   <li>
-    <%= link_to n.content, n %>
+    <%= link_to n.content, n, class: 'notes_content' %>
     <%= raw(t 'views.list.importance') if n.importance %>
   </li>
   <p>( <%= I18n.l(n.created_at, format: :long) %> )</p>
