--- a/app/views/users/landing.html.erb
+++ b/app/views/users/landing.html.erb
@@ -17,7 +17,7 @@
     <div class='carousel-item'>
       <div class='nav_wrapper'>
         <div class='nav_inner'>
-          <%= image_tag('nav_image1.png', class: 'image') %>
+          <%= image_tag('nav_image1.png', class: 'img-thumbnail image') %>
           <div class='nav_content'>
             <p class='nav_caption'>Welcome!</p>
             <p class='text-justify'>このアプリケーションは、旅行中に撮った写真にコメントを入れてカードを作ることができます。</p>
@@ -29,10 +29,10 @@
     <div class='carousel-item'>
       <div class='nav_wrapper'>
         <div class='nav_inner'>
-          <%= image_tag('nav_image2.png', class: 'image') %>
+          <%= image_tag('nav_image2.png', class: 'img-thumbnail image') %>
           <div class='nav_content'>
             <p class='nav_caption'>STEP.1</p>
-            <p class='text-justify'>最初に「トラベル新規作成」から、旅行の予定を作成します。（画像とエリア情報は後から追加することができます。）</p>
+            <p class='text-justify'>最初に「NEW BOOKLET」から、旅行の予定を作成します。（画像とエリア情報は後から追加することができます。）</p>
           </div>
         </div>
       </div>
@@ -41,10 +41,10 @@
     <div class='carousel-item'>
       <div class='nav_wrapper'>
         <div class='nav_inner'>
-          <%= image_tag('nav_image3.png', class: 'image') %>
+          <%= image_tag('nav_image3.png', class: 'img-thumbnail image') %>
           <div class='nav_content'>
             <p class='nav_caption'>STEP.2</p>
-            <p class='text-justify'>作成した旅行予定から、「カード新規作成」を選択します。（アップロードする画像が2枚必要です。）</p>
+            <p class='text-justify'>作成した旅行の予定から、「NEW CARD」を選択します。（アップロードする画像が2枚必要です。）</p>
           </div>
         </div>
       </div>
@@ -53,10 +53,10 @@
     <div class='carousel-item'>
       <div class='nav_wrapper'>
         <div class='nav_inner'>
-          <%= image_tag('nav_image4.png', class: 'image') %>
+          <%= image_tag('nav_image4.png', class: 'img-thumbnail image') %>
           <div class='nav_content'>
             <p class='nav_caption'>STEP.3</p>
-            <p class='text-justify'>画面下部の「PDFで表示」または「ダウンロード」からPDFを作成しダウンロードすることができます。</p>
+            <p class='text-justify'>画面下部の「DOWNLOAD」からPDFを作成しダウンロードすることができます。</p>
           </div>
         </div>
       </div>
@@ -65,9 +65,9 @@
     <div class='carousel-item'>
       <div class='nav_wrapper'>
         <div class='nav_inner'>
-          <%= image_tag('nav_image5.png', class: 'image') %>
+          <%= image_tag('nav_image5.png', class: 'img-thumbnail image') %>
           <div class='nav_content'>
-            <p class='text-justify'>この他に、持ち物リストなどを作るリスト作成機能、メモ帳機能などがあります。Let's go out！</p>
+            <p class='text-justify'>この他に、持ち物リストなどを作るリスト作成機能、メモ帳機能などがあります。Have a good trip！</p>
             <p><%= link_to 'Sign up', new_user_registration_path, class: 'btn btn-outline-light' %></p>
           </div>
         </div>
