--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,27 +1,27 @@
 <header class='navbar fixed-top' id='header'>
   <% if controller_name == 'users' && action_name == 'personal' %>
-    <p class='mb-0'>
+    <div class='col-4'>
       <small>
-        <%= link_to 'ユーザー編集', edit_user_registration_path %>
+        <%= link_to 'EDIT USER', edit_user_registration_path %>
       </small>
-    </p>
+    </div>
     <%= image_tag('title.png', class: 'header_image') %>
-    <p class='mb-0'>
+    <div class='col-4 text-right'>
       <small>
-        <%= link_to '　ログアウト', destroy_user_session_path, method: :delete %>
+        <%= link_to 'LOG OUT', destroy_user_session_path, method: :delete %>
       </small>
-    </p>
+    </div>
   <% else %>
-    <p class='mb-0'>
+    <div class='col-4'>
       <small>
-        <%= link_to 'ユーザー詳細', user_path %>
+        <%= link_to 'HOME', user_path %>
       </small>
-    </p>
+    </div>
     <%= image_tag('title.png', class: 'header_image') %>
-    <p class='mb-0'>
+    <div class='col-4 text-right'>
       <small>
-        <%= link_to '　　　　戻る', :back %>
+        <%= link_to 'BACK', :back %>
       </small>
-    </p>
+    </div>
   <% end %>
 </header>
