--- a/app/views/layouts/_users_sidebar.html.erb
+++ b/app/views/layouts/_users_sidebar.html.erb
@@ -5,14 +5,21 @@
 
   <hr class='dotted_white'>
 
-  <%= link_to 'ユーザー詳細', user_path, class: 'nav-link' %>
-  <%= link_to 'トラベル一覧', travels_path, class: 'nav-link' %>
-  <%= link_to '作成したメモ一覧', personal_notes_path, class: 'nav-link' %>
-  <%= link_to '作成したリスト一覧', personal_lists_path, class: 'nav-link' %>
-  <%= link_to '戻る', :back, class: 'nav-link' %>
+  <%= link_to 'HOME', user_path,
+              class: 'nav-link font-weight-light' %>
+  <%= link_to 'BOOKLETS', travels_path,
+              class: 'nav-link font-weight-light' %>
+  <%= link_to 'ALL NOTES', personal_notes_path,
+              class: 'nav-link font-weight-light' %>
+  <%= link_to 'ALL LISTS', personal_lists_path,
+              class: 'nav-link font-weight-light' %>
+  <%= link_to 'BACK', :back,
+              class: 'nav-link font-weight-light' %>
 
   <hr class='dotted_white'>
 
-  <%= link_to 'ユーザー編集', edit_user_registration_path, class: 'nav-link' %>
-  <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+  <%= link_to 'EDIT USER', edit_user_registration_path,
+              class: 'nav-link font-weight-light' %>
+  <%= link_to 'LOG OUT', destroy_user_session_path,
+              method: :delete, class: 'nav-link font-weight-light' %>
 </nav>
