--- a/app/views/lists/_index.html.erb
+++ b/app/views/lists/_index.html.erb
@@ -1,5 +1,5 @@
 <% lists.each do |l| %>
   <li class='mb-2'>
-    <%= link_to l.title, l %> has <%= l.items.count %> items
+    <%= link_to l.title, l, class: 'lists_title' %> has <%= l.items.count %> items
   </li>
 <% end %>
