--- a/app/views/lists/_new.html.erb
+++ b/app/views/lists/_new.html.erb
@@ -22,19 +22,19 @@
 
   <div class='form-group'>
     <% if action_name == 'edit' %>
-      <%= f.submit 'UPDATE', class: 'btn btn-primary btn-sm' %>
+      <%= f.submit 'UPDATE', class: 'btn btn-primary btn-sm font-weight-light' %>
       <%= link_to_add_association 'ADD ITEM', f, :items,
-            class: 'btn btn-primary btn-sm',
+            class: 'btn btn-primary btn-sm font-weight-light',
             id: 'add_item_link',
             data: { association_insertion_node: '#add_item',
                     association_insertion_method: 'append'
                   }
       %>
-      <%= link_to 'DELETE', list_path(@list), data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-secondary btn-sm' %>
+      <%= link_to 'DELETE', list_path(@list), data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-secondary btn-sm font-weight-light' %>
     <% else %>
-      <%= f.submit 'CREATE', class: 'btn btn-primary btn-sm' %>
+      <%= f.submit 'CREATE', class: 'btn btn-primary btn-sm font-weight-light' %>
       <%= link_to_add_association 'ADD ITEM', f, :items,
-            class: 'btn btn-primary btn-sm',
+            class: 'btn btn-primary btn-sm font-weight-light',
             id: 'add_item_link',
             data: { association_insertion_node: '#add_item',
                     association_insertion_method: 'append'
