--- a/app/views/lists/duplicate.html.erb
+++ b/app/views/lists/duplicate.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
-  <h2>Duplicate list</h2>
+  <h2>DUPLICATE LIST</h2>
   <hr>
   <% if @list.errors.any? %>
     <div class='border rounded mt-2 mb-2' id='list_error_area'>
@@ -26,9 +26,9 @@
     </div>
 
     <div class='form-group'>
-      <%= f.submit 'CREATE', class: 'btn btn-primary btn-sm' %>
+      <%= f.submit 'CREATE', class: 'btn btn-primary btn-sm font-weight-light' %>
       <%= link_to_add_association 'ADD ITEM', f, :items,
-            class: 'btn btn-primary btn-sm',
+            class: 'btn btn-primary btn-sm font-weight-light',
             id: 'add_item_link',
             data: { association_insertion_node: '#add_item',
                     association_insertion_method: 'append'
