--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
-  <h2>Edit note</h2>
+  <h2>EDIT NOTE</h2>
   <hr class='mb-0'>
   <div id='note_area'>
     <%= render partial: 'notes/new', locals: { note: @note } %>
