--- a/app/views/notes/personal.html.erb
+++ b/app/views/notes/personal.html.erb
@@ -1,12 +1,12 @@
 <%= stylesheet_link_tag 'personal', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
-  <h2>All notes</h2>
+  <h2>ALL NOTES</h2>
 
   <hr>
 
   <% @notes.each do |n| %>
-    <li><%= link_to n.content, n %></li>
+    <li><%= link_to n.content, n, class: 'notes_content' %></li>
     <p>( <%= I18n.l(n.created_at, format: :long) %> )</p>
   <% end %>
 
