--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -6,5 +6,5 @@
   <%= image_tag(@note.image.url, class: 'img-thumbnail mb-3') if @note.image.present? %>
   <p class='mb-0'>create at <%= I18n.l(@note.created_at, format: :long) %></p>
   <p>update at <%= I18n.l(@note.updated_at, format: :long) %></p>
-  <%= link_to 'メモ編集', edit_note_path(@note), class: 'btn btn-primary btn-sm' %>
+  <%= link_to 'EDIT NOTE', edit_note_path(@note), class: 'btn btn-primary btn-sm font-weight-light' %>
 </div>
