--- a/app/views/travels/_area_fields.html.erb
+++ b/app/views/travels/_area_fields.html.erb
@@ -21,5 +21,5 @@
     <%= f.date_select :left_at %>
   </div>
 
-  <%= link_to_remove_association 'DELERT AREA', f, class: 'btn btn-secondary btn-sm' %>
+  <%= link_to_remove_association 'DELERT AREA', f, class: 'btn btn-secondary btn-sm font-weight-light' %>
 </div>
