--- a/app/views/travels/_form.html.erb
+++ b/app/views/travels/_form.html.erb
@@ -1,10 +1,12 @@
+<%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
+
 <div class='col-sm-10 offset-sm-2 contents'>
   <% if action_name == 'edit' || action_name == 'update' %>
     <%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <h2>Edit travel</h2>
+    <h2>EDIT BOOKLET</h2>
   <% else %>
     <%= stylesheet_link_tag 'personal', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <h2>New travel</h2>
+    <h2>NEW BOOKLET</h2>
   <% end %>
 
   <% if @travel.errors.any? %>
@@ -55,10 +57,10 @@
     </div>
 
     <% if action_name == 'edit' || action_name == 'update' %>
-      <%= f.submit 'UPDATE', class: 'btn btn-primary btn-sm' %>
+      <%= f.submit 'UPDATE', class: 'btn btn-primary btn-sm font-weight-light' %>
 
       <%= link_to_add_association 'ADD AREA', f, :areas,
-        class: 'btn btn-primary btn-sm',
+        class: 'btn btn-primary btn-sm font-weight-light',
         id: 'add_area_link',
         data: {
          association_insertion_node: '#add_area',
@@ -68,13 +70,13 @@
 
       <%= link_to 'DELETE', travel_path(@travel),
           data: { confirm: 'Are you sure?' }, method: :delete,
-          class: 'btn btn-secondary btn-sm'
+          class: 'btn btn-secondary btn-sm font-weight-light'
       %>
     <% else %>
-      <%= f.submit 'CREATE', class: 'btn btn-primary btn-sm' %>
+      <%= f.submit 'CREATE', class: 'btn btn-primary btn-sm font-weight-light' %>
 
       <%= link_to_add_association 'ADD AREA', f, :areas,
-        class: 'btn btn-primary btn-sm',
+        class: 'btn btn-primary btn-sm font-weight-light',
         id: 'add_area_link',
         data: {
          association_insertion_node: '#add_area',
