--- a/app/views/users/personal.html.erb
+++ b/app/views/users/personal.html.erb
@@ -3,12 +3,12 @@
 <div class='col-sm-10 offset-sm-2 contents'>
   <div class='row'>
     <div class='col-12'>
-      <h2>Home</h2>
-      <div class='btn btn-primary btn-sm'>
-        Travels <span class='badge badge-light'><%= @user.travels.count %></span>
+      <h2>HOME</h2>
+      <div class='btn btn-primary btn-sm font-weight-light'>
+        BOOKLETS <span class='badge badge-light'><%= @user.travels.count %></span>
       </div>
-      <div class='btn btn-primary btn-sm'>
-        Cards <span class='badge badge-light'><%= @cards_count %></span>
+      <div class='btn btn-primary btn-sm font-weight-light'>
+        CARDS <span class='badge badge-light'><%= @cards_count %></span>
       </div>
     </div>
   </div>
@@ -28,7 +28,7 @@
             <div class='card-title'><%= c.title %></div>
             <div class='card-text'>
               <small>
-                updated at<%= I18n.l(c.updated_at, format: :custom) %>
+                updated at <%= I18n.l(c.updated_at, format: :custom) %>
               </small>
             </div>
           </div>
