--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,12 +1,12 @@
 <%= stylesheet_link_tag 'registrations_edit', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <h2 class='text-uppercase'>edit <%= resource_name.to_s.humanize %></h2>
   <%= render 'layouts/notice' %>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <% if resource.errors.any? %>
-      <div class='border rounded' id='error_explanation'>
+      <div class='border rounded' id='registrations_error_area'>
           <% resource.errors.full_messages.each do |m| %>
             <li><%= m %></li>
           <% end %>
@@ -59,7 +59,7 @@
     </div>
 
     <div class='form-group'>
-      <%= f.submit 'Update', class: 'btn btn-primary' %>
+      <%= f.submit 'UPDATE', class: 'btn btn-primary font-weight-light' %>
     </div>
   <% end %>
 
