--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -45,7 +45,7 @@
         %>
       </div>
 
-      <div class='form-group'>
+      <div class='form-group mb-0'>
         <%= f.submit 'Sign up', class: 'btn btn-primary' %>
       </div>
     <% end %>
